<resources>
    <string name="app_name">Leet Spaced</string>
    <string name="today_tab_label">Today</string>
    <string name="home_tab_label">Home</string>
    <string name="stats_tab_label">Stats</string>

    <!--Theme Preference Strings-->
    <string name="pref_theme_summary">Theme</string>

    <string name="pref_theme_label_system_default">System Default</string>
    <string name="pref_theme_label_light">Light</string>
    <string name="pref_theme_label_dark">Dark</string>

    <string name="pref_theme_key_system_default" translatable="false">System Default</string>
    <string name="pref_theme_key_light" translatable="false">Light</string>
    <string name="pref_theme_key_dark" translatable="false">Dark</string>

    <!--Main Menu-->
    <string name="settings_menu_option_title">Settings</string>
    <string name="pref_theme_title">Select Theme</string>

    <!--Theme Preference-->
    <string name="pref_theme_key" translatable="false">theme</string>

    <!--Bucket One Duration Preference-->
    <string name="bucket_one_duration_label">Reminder 1 Duration</string>
    <string name="bucket_one_duration_key">bucket_one_duration_key</string>

    <!--Bucket Two Duration Preference-->
    <string name="bucket_two_duration_label">Reminder 2 Duration</string>
    <string name="bucket_two_duration_key">bucket_two_duration_key</string>

    <!--List item Question onClick Dialog-->
    <string name="question_details_dialog_negative_text">Cancel</string>
    <string name="question_details_dialog_positive_text">Reviewed</string>

    <!--Stats Fragment-->
    <string name="mastered_questions_count_label">Mastered</string>
    <string name="confident_questions_count_label">Confident</string>
    <string name="solved_questions_count_label">Solved</string>
    <string name="unsolved_questions_count_label">Unsolved</string>

    <!--Home Fragment Tab Labels-->
    <string name="tab_all_questions_label">All</string>
    <string name="tab_solved_questions_label">Solved</string>
    <string name="tab_confident_questions_label">Confident</string>
    <string name="tab_mastered_questions_label">Mastered</string>
    <string name="pref_notification_title">Enable message notifications</string>
    <string name="pref_notification_key">notifications</string>

    <!--  Question onClick details Dialog  -->
    <string name="dialog_edittext_hint_comments">Comments</string>
    <string name="dialog_title">#%1$d %2$s</string>
    <string name="today_fragment_headline">Questions for today</string>
    <string name="today_empty_screen_message">No questions for today!</string>
    <string name="home_solved_empty_screen_message">Try solving some unsolved questions!</string>
    <string name="home_confident_empty_screen_message">Try reviewing some solved questions!</string>
    <string name="home_mastered_empty_screen_message">Try reviewing some confident questions!</string>
</resources>