<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_theme_title"
        android:key="@string/pref_theme_key"
        android:defaultValue="@string/pref_theme_key_system_default"
        android:entries="@array/pref_theme_option_labels"
        android:entryValues="@array/pref_theme_option_keys"
        android:summary="@string/pref_theme_summary"/>

    <EditTextPreference
        android:title="@string/bucket_one_duration_label"
        android:key="@string/bucket_one_duration_key"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:defaultValue="4"/>

    <EditTextPreference
        android:title="@string/bucket_two_duration_label"
        android:key="@string/bucket_two_duration_key"
        android:inputType="phone"
        android:maxLength="2"
        android:defaultValue="7"/>

</androidx.preference.PreferenceScreen>